# HappyLittleDinosaursOnline

./: package-lock.json  requirements.txt  setup.cfg
game/: __init__.py  card.py  db.py  dinosaur.py  dinosaur_names.py  disaster_card.py  disaster_deck.py  disaster_type.py  game_controller.py  game_manager.py  hand_manager.py  instant_card.py  main_deck.py  player.py  point_card.py  runner.py  schema.sql  web_content.py
game/static/: create_room_handler.js  game_socket_handler.js  require.js  scripts.js  style.css  waiting_room.js
game/static/db_content/: disaster_cards.tsv  instant_cards.tsv  point_cards.tsv
game/templates/: base.html  game_join.html  game_menu.html  game_start.html  game_start_new.html  game_waiting_room.html  home_page.html  rules.html
tests/: conftest.py  test_card.py  test_config.py  test_db.py  test_dinosaur.py  test_disaster_card.py  test_disaster_deck.py  test_disaster_type.py  test_game_controller.py  test_game_manager.py  test_hand_manager.py  test_instant_card.py  test_main_deck.py  test_player.py  test_point_card.py  test_web_content.py
