[metadata]
name = happy-little-dinosaur
version = 1.0.0
maintainer = mwag
maintainer_email = madeleinewagner88@gmail.com
description= = Online version of Happy Little Dinosaurs

[options]
packages = find:
include_package_data = true
install_requires = 
	Flask

[options.extras_require]
test = 
	pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = 
	game
